--- a/State-Space-Models.ipynb
+++ b/State-Space-Models.ipynb
@@ -494,7 +494,7 @@
     "В статье [On the Parameterization and Initialization of Diagonal State Space Models](https://arxiv.org/abs/2206.11893)(2022):\n",
     "\n",
     "<div style=\"text-align:center\">\n",
-    "<img src=\"images/3.png\" width=\"600\" center>\n",
+    "<img src=\"https://raw.githubusercontent.com/SoulQrat/State-Space-Models/main/images/3.png\" width=\"600\" center>\n",
     "</div>\n",
     "\n",
     "- Вводят **Diagonal S4 (S4D)**: берут матрицу состояния **A диагональной** (в комплексном пространстве) вместо DPLR в S4\n",
@@ -506,7 +506,7 @@
     "Такой метод проще в реализации и, как видно из таблицы ниже, по качеству в большинстве случаев близок к S4.\n",
     "\n",
     "<div style=\"text-align:center\">\n",
-    "<img src=\"images/1.png\" width=\"600\" center>\n",
+    "<img src=\"https://raw.githubusercontent.com/SoulQrat/State-Space-Models/main/images/1.png\" width=\"600\" center>\n",
     "</div>"
    ]
   },
@@ -529,7 +529,7 @@
     "Следущие три функции в коде это имплементация данных функций на PyTorch.\n",
     "\n",
     "<div style=\"text-align:center\">\n",
-    "<img src=\"images/2.png\" width=\"600\" center>\n",
+    "<img src=\"https://raw.githubusercontent.com/SoulQrat/State-Space-Models/main/images/2.png\" width=\"600\" center>\n",
     "</div>"
    ]
   },
@@ -1805,7 +1805,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "tmp",
+   "display_name": "State-Space-Models",
    "language": "python",
    "name": "python3"
   },
@@ -1819,7 +1819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.13"
   },
   "papermill": {
    "default_parameters": {},
